--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <title>Dejard ToDo</title>
-        <style href="stylesheet" src="css/style.css"></style>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <div class="partb">
+            <button type="button">
+                create a Task
+            </button>
+        </div>
+        <div class="parttodo">
+            <li class="check">
+                <input type="checkbox" name="" id="" class="">
+                <input type="checkbox" name="" id="" class="">
+            </li>
+            <li class="text">
+                <input type="text" name="" id="" class="">
+                <input type="text" name="" id="" class="">
+            </li>
+        </div>
         <script src="js/script.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" type="text/javascript"></script>
     </body>
 </html>
